@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Fixed issue that caused the privileges view to not be scrollable.
+
  - Fixed typo in privileges view.
 
 2017/08/29 1.5.2
